--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "version": "3.0.3",
-  "name": "gatsby-starter-lumen",
-  "description": "A minimal, lightweight and mobile-first starter for creating blazing-fast static blogs",
+  "name": "jerryqin.com",
+  "description": "",
   "main": "n/a",
   "scripts": {
     "develop": "yarn run clean && gatsby develop",
@@ -16,7 +16,7 @@
     "test:coverage": "jest --coverage --config ./jest/jest-config.js",
     "test:watch": "jest --watch --config ./jest/jest-config.js"
   },
-  "repository": "https://github.com/jerryqin1/jerryqin1.github.io",
+  "repository": "https://github.com/jerryqin1/jerryqin",
   "author": "Jerry Qin <jerry.qin@vanderbilt.edu>",
   "license": "MIT",
   "keywords": [
